syntax = "proto3";

package data.protobuf;

message CpuUsage {
    string cpu_id = 1;
    int32 cpu_usage = 2;
}
message MemUsage{
    float mem_usage = 1;
}

message InitData{
    int32 number_of_cpu = 1;
    //int32 number_of_partition = 2;
}

message EmptyReq{

}
message MemUsageRequest{
    float prev_mem_usage = 1;
}
message CpuUsageRequest{
    int32 needed_cpu_usage = 1;
}


service FetchData{
    rpc FetchCpuUsage (CpuUsageRequest) returns (CpuUsage);
    /* rpc FetchMemUsage (MemUsageRequest) returns (Data); */
    /* rpc InitDetails (EmptyReq) returns (InitData); */
}
